// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Access code not found in return url renders correctly 1`] = `
<div>
  Access code not found in callback URL. Please try again or contact the website administrator.
</div>
`;

exports[`Application Client ID not deployed renders correctly 1`] = `
<div>
  Client ID not included with deployment. Please try again or contact the website administrator.
</div>
`;

exports[`Cannot connect to server renders correctly 1`] = `
<div>
  You have reached the GitHub callback page
</div>
`;

exports[`Successful retrieval of auth token renders correctly 1`] = `
<div>
  You have reached the GitHub callback page
</div>
`;
